phase 7 is now implemented, following the unit tests implementations
